<?xml version="1.0" encoding="utf-8"?>
<resources>
	
	<color name="holo_blue_light">#ff33b5e5</color>
	
    <!-- Math Alarm Activity -->
    <string name="app_name">趣味闹钟</string>
    <string name="title_activity_set_alarms">设置闹钟</string>
    <string name="no_alarms">没有闹钟，点击右上角设置</string>
    
    <string name="button_new">新建</string>
    
    
    <string name="menu_item_new">新建</string>
    <string name="menu_item_save">保存</string>
    <string name="menu_item_delete">取消</string>    
    <string name="menu_item_rate">给软件评分</string>
    <string name="menu_item_website">网址</string>
    <string name="menu_item_report">报告漏洞</string>
    
  
	<string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="decimal_button_text">,</string>
	<string name="clear_button_text">清空</string>
	<string name="minus_button_text">-</string>
	
	<string name="username">账号：</string>
    <string name="password">密码：</string>
    <string name="rem_pwd">记住密码</string>
    <string name="login">登录</string>
    <string name="to_register">还没有账号，这里注册</string>
    <string name="confirm_password">确认密码：</string>
    <string name="register">注册</string>
    <string name="to_login">注册成功？马上登录吧！</string>
    <string name="et_pwd_hint">请输入账号密码</string>
    <string name="et_username_hint">请输入用户名！</string>
    <string name="iv_header">头像</string>
	
	<color name="title_background_color">#000000</color>
		
	<string name="button_delete">删除</string>
	<string name="ok">确认</string>
	<string name="cancel">取消</string>

</resources>