<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/bg_login">
    
    <ImageView 
        android:src="@drawable/alarmclock"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/iv_header"/>
    
    <LinearLayout 
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        >
        
        <!-- android:background="@drawable/shurukuang" -->
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"/>
        <EditText 
            android:id="@+id/et_username"
            android:layout_width="210dip"
            android:background="@null"
            android:layout_height="wrap_content"
            android:hint="@string/et_username_hint"
            />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        >
        <!-- android:background="@drawable/shurukuang" -->
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"/>
        <EditText 
            android:id="@+id/et_pwd"
            android:layout_width="210dp"
            android:background="@null"
            android:layout_height="wrap_content"
            android:hint="@string/et_pwd_hint"
            android:inputType="textPassword"
            />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">
        
        <CheckBox 
            android:id="@+id/cb_rem_pwd"
            style="@drawable/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rem_pwd"
            android:checked="true"/>
        
        <Button 
            android:id="@+id/bt_login"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:text="@string/login"
            android:layout_marginLeft="30dp"
            android:textSize="16sp"/>
    </LinearLayout>
    
    <Button 
        android:id="@+id/bt_to_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/to_register"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        />

</LinearLayout>
