<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    android:orientation="vertical" >

     <TableRow
        android:id="@+id/tableRow0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            
            android:layout_height="50dp" 
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/black" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
         android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" 
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/Button1"
            android:layout_width="80dp"
            android:layout_height="60dp"
            
            android:tag="1"
            android:text="@string/_1" 
            android:background="@drawable/button"
            android:layout_marginLeft="20dp"/>

        <Button
            android:id="@+id/Button2"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:tag="2"
            android:text="@string/_2" 
            android:background="@drawable/button"
            android:layout_marginLeft="20dp"/>

        <Button
            android:id="@+id/Button3"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:tag="3"
            android:text="@string/_3" 
            android:background="@drawable/button"
            android:layout_marginLeft="20dp"/>

    </TableRow>

    <TableRow
        android:id="@+id/TableRow3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" 
         android:layout_marginTop="5dp"
         android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/Button4"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:background="@drawable/button"
            android:tag="4"
            android:text="@string/_4" 
            android:layout_marginLeft="20dp"/>

        <Button
            android:id="@+id/Button5"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:tag="5"
            android:text="@string/_5" 
            android:background="@drawable/button"
            android:layout_marginLeft="20dp"/>

        <Button
            android:id="@+id/Button6"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:tag="6"
            android:text="@string/_6" 
            android:background="@drawable/button"
            android:layout_marginLeft="20dp"/>

    </TableRow>

    <TableRow
        android:id="@+id/TableRow4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
         android:layout_marginTop="5dp"
         android:layout_gravity="center_horizontal" >

        <Button
            android:id="@+id/Button7"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:tag="7"
            android:text="@string/_7" 
            android:background="@drawable/button"
            android:layout_marginLeft="20dp"/>

        <Button
            android:id="@+id/Button8"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:tag="8"
            android:text="@string/_8" 
            android:background="@drawable/button"
            android:layout_marginLeft="20dp"/>

        <Button
            android:id="@+id/Button9"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:tag="9"
            android:text="@string/_9" 
            android:background="@drawable/button"
            android:layout_marginLeft="20dp"/>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
         android:layout_marginTop="5dp"
         android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/Button_decimal"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:tag="."
            android:text="@string/decimal_button_text" 
            android:background="@drawable/button"
            android:layout_marginLeft="20dp"/>

        <Button
            android:id="@+id/Button0"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:tag="0"
            android:text="@string/_0" 
            android:background="@drawable/button"
            android:layout_marginLeft="20dp"/>

        <Button
            android:id="@+id/Button_minus"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:tag="-"
            android:text="@string/minus_button_text" 
            android:background="@drawable/button"
            android:layout_marginLeft="20dp"/>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
         android:layout_marginTop="5dp"
         android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/Button_clear"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:tag="clear"
            android:text="@string/clear_button_text"
            android:background="@drawable/button" 
            android:textSize="20sp"/>

    </TableRow>


</LinearLayout>
