<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/bg_login">
    
    <ImageView 
        android:src="@drawable/alarmclock"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center_horizontal"/>
    
    <LinearLayout 
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        
        <TextView 
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/username"/>
        <EditText 
            android:id="@+id/et_add_username"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        
        <TextView 
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            
            android:text="@string/password"/>
        <EditText 
            android:id="@+id/et_add_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        
        <TextView 
            
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"/>
        <EditText 
            android:id="@+id/et_confirm_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </LinearLayout>
    
    <Button 
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/bt_register"
        android:layout_width="80dp"
        android:layout_height="50dp"
        
        android:text="@string/register"/>
    
    <Button 
        android:layout_gravity="right"
        android:id="@+id/bt_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_login"
        android:background="@null"
        android:layout_marginTop="10dp"/>

</LinearLayout>
